Tweaked the styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <script language="javascript" type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
-        <p>shellshocked$</p>
+        <p>shellshocked$ <input type="text" name="prompt" id="prompt"/></p>
     </body>
 </html>
