Tweaked the styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <script language="javascript" type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
-        <p>shellshocked$ <input type="text" name="prompt" id="prompt"/></p>
+        <div id="content">
+            <p>shellshocked$ <input type="text" name="prompt" id="prompt"/></p>
+        </div>
     </body>
 </html>
