--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="content">
-            <p>shellshocked$ <input type="text" name="prompt" id="prompt"/></p>
+            <p id="prompt">shellshocked$ </p>
         </div>
     </body>
 </html>
