--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="content">
-            <p id="prompt">shellshocked$ </p>
+            <span id="prompt">shellshocked$ </span>
         </div>
     </body>
 </html>
