--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>shellshocked v1.0</title>
         <link rel="stylesheet" href="css/style.css" />
         <script language="javascript" type="text/javascript" src="js/jquery-1.8.1.min.js"></script>
+        <script language="javascript" type="text/javascript" src="js/interpreter.js"></script>
         <script language="javascript" type="text/javascript" src="js/shell.js"></script>
         <script language="javascript" type="text/javascript" src="js/main.js"></script>
     </head>
