--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>shellshocked v1.0</title>
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="shortcut icon" href="img/favicon.ico" />
         <script language="javascript" type="text/javascript" src="js/jquery-1.8.1.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/lexer.js"></script>
         <script language="javascript" type="text/javascript" src="js/parser.js"></script>
