--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>shellshocked v1.0</title>
+        <title>JSBasicShell v1.0</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="shortcut icon" href="img/favicon.ico" />
         <script language="javascript" type="text/javascript" src="js/jquery-1.8.1.min.js"></script>
