Amended to use Bower for managing jQuery

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>JSBasicShell v1.0</title>
-        <link rel="stylesheet" href="css/style.css" />
-        <link rel="shortcut icon" href="img/favicon.ico" />
-        <script language="javascript" type="text/javascript" src="js/jquery-1.8.1.min.js"></script>
-        <script language="javascript" type="text/javascript" src="js/lexer.js"></script>
-        <script language="javascript" type="text/javascript" src="js/parser.js"></script>
-        <script language="javascript" type="text/javascript" src="js/shell.js"></script>
-        <script language="javascript" type="text/javascript" src="js/main.js"></script>
+        <link rel="stylesheet" href="static/css/style.css" />
+        <link rel="shortcut icon" href="static/img/favicon.ico" />
+        <script language="javascript" type="text/javascript" src="static/bower_components/jquery/jquery.min.js"></script>
+        <script language="javascript" type="text/javascript" src="static/js/lexer.js"></script>
+        <script language="javascript" type="text/javascript" src="static/js/parser.js"></script>
+        <script language="javascript" type="text/javascript" src="static/js/shell.js"></script>
+        <script language="javascript" type="text/javascript" src="static/js/main.js"></script>
     </head>
     <body>
         <div id="content">
