--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script language="javascript" type="text/javascript" src="static/js/lexer.js"></script>
         <script language="javascript" type="text/javascript" src="static/js/parser.js"></script>
         <script language="javascript" type="text/javascript" src="static/js/shell.js"></script>
-        <script language="javascript" type="text/javascript" src="static/js/main.js"></script>
+        <script language="javascript" type="text/javascript" src="static/js/app.js"></script>
     </head>
     <body>
         <div id="content">
